<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddGoal">

    <ImageView
        android:id="@+id/back_btn"
        android:layout_width="58dp"
        android:layout_height="37dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="352dp"
        android:background="@color/btnColor"
        android:paddingLeft="5dp"
        android:paddingTop="5dp"
        android:paddingRight="5dp"
        android:paddingBottom="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/backbtn" />

    <androidx.cardview.widget.CardView
        android:id="@+id/incomeForm"
        android:layout_width="373dp"
        android:layout_height="566dp"
        android:layout_marginTop="32dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp"
        app:cardMaxElevation="10dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.421"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/back_btn">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="172dp"
            android:layout_height="33dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/GoalName"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/etGoalName"
            android:layout_width="276dp"
            android:layout_height="56dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="50dp"
            android:ems="10"
            android:hint="@string/EnterGoalHint"
            android:inputType="textPersonName"
            android:textSize="@dimen/hintText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="150dp"
            android:text="@string/TextDescription"
            android:textSize="@dimen/formText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etGoalName" />

        <EditText
            android:id="@+id/etGoalDescription"
            android:layout_width="277dp"
            android:layout_height="51dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="190dp"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/enterDesc"
            android:inputType="textMultiLine"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />


        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="450dp"
            android:backgroundTint="@color/design_default_color_error"
            android:text="@string/cancelbtn"
            android:textSize="@dimen/btnTextSize"
            app:layout_constraintEnd_toStartOf="@+id/etGoalConfirmBtn"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView8" />


        <Button
            android:id="@+id/etGoalConfirmBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="220dp"
            android:layout_marginTop="450dp"
            android:backgroundTint="@color/btnColor"
            android:text="@string/confirm"
            android:textSize="@dimen/btnTextSize" />

    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>