<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/Income_View"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".incomeView">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/topView"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:background="@drawable/top_box"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/incomeForm"
            android:layout_width="385dp"
            android:layout_height="543dp"
            android:layout_marginTop="50dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="10dp"
            app:cardUseCompatPadding="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.578"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvIncName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="16dp"
                    android:text="@string/incomeName"
                    android:textAllCaps="true"
                    android:textSize="20sp"
                     />

                <TextView
                    android:id="@+id/incNameValue"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="16dp"
                    android:ems="10"
                    android:textStyle="bold"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/tvincAmount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="16dp"
                    android:text="@string/incomeAmount"
                    android:textAllCaps="true"
                    android:textSize="20sp"
                    />

                <TextView
                    android:id="@+id/incAmountValue"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="16dp"
                    android:ems="10"
                    android:textStyle="bold"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/tvincDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="16dp"
                    android:text="@string/date"
                    android:textSize="20sp"
                     />

                <TextView
                    android:id="@+id/incDateValue"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="16dp"
                    android:ems="10"
                    android:textStyle="bold"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/tvreccur"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="16dp"
                    android:text="@string/recurring"
                    android:textSize="20sp"
                    />

                <TextView
                    android:id="@+id/incReccurValue"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="16dp"
                    android:ems="10"
                    android:textStyle="bold"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/tvincFrequancy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="16dp"
                    android:text="@string/frequency"
                    android:textSize="20sp"
                    />

                <TextView
                    android:id="@+id/incFrequancyValue"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="16dp"
                    android:ems="10"
                    android:textStyle="bold"
                    android:textSize="24sp" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/delete"
            android:layout_width="150dp"
            android:layout_height="48dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="4dp"
            android:backgroundTint="@color/design_default_color_error"
            android:text="@string/delete"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.05"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/earned" />

        <Button
            android:id="@+id/update"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginRight="24dp"
            android:text="@string/update"
            android:backgroundTint="@color/colorThird"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/delete"
            app:layout_constraintTop_toBottomOf="@+id/earned" />

        <Button
            android:id="@+id/earned"
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginRight="24dp"
            android:text="@string/earned"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.576"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/incomeForm" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
