<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >


<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".addIncome">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/topView"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:background="@drawable/top_box"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/incomeForm"
        android:layout_width="385dp"
        android:layout_height="543dp"
        android:layout_marginTop="112dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.578"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvIncName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="16dp"
                android:text="@string/incomeName"
                android:textAllCaps="true"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/incNameValue"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="16dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="eg:Salary"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tvincAmount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="16dp"
                android:text="@string/incomeAmount"
                android:textAllCaps="true"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/incAmountValue"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="16dp"
                android:ems="10"
                android:inputType="numberDecimal"
                android:text="eg:50000"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tvincDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="16dp"
                android:text="@string/date"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/incDateValue"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="16dp"
                android:ems="10"
                android:inputType="date"
                android:text="eg:10/03/2023"
                android:textSize="16sp" />

            <RadioGroup
                android:id="@+id/reccur"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="16dp">

                <RadioButton
                    android:id="@+id/nonrecurring"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Non-Recurring"
                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/recurring"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Recurring"
                    android:textSize="18sp" />
            </RadioGroup>

            <TextView
                android:id="@+id/tvincFrequancy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="16dp"
                android:text="@string/often"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="16dp"
                android:entries="@array/frequency" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/clear"
        android:layout_width="150dp"
        android:layout_height="48dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/design_default_color_error"
        android:text="@string/clear"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.072"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/incomeForm" />

    <Button
        android:id="@+id/confirm"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="24dp"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:text="@string/confirm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.659"
        app:layout_constraintStart_toEndOf="@+id/clear"
        app:layout_constraintTop_toBottomOf="@+id/incomeForm" />
</androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
