<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/accounts_container"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Accounts">

    <ScrollView
        android:layout_width="414dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="125dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="414dp"
                    android:layout_height="wrap_content"
                    app:flow_verticalAlign="top"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/constraintLayout"
                        android:layout_width="match_parent"
                        android:layout_height="360dp"
                        android:background="@drawable/top_box"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"/>

                    <ImageView
                        android:id="@+id/imageView5"
                        android:layout_width="88dp"
                        android:layout_height="77dp"
                        android:layout_marginTop="44dp"
                        android:src="@drawable/account"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/textViewaddAcc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:text="@string/Acc_heading"
                        android:textColor="#FFFFFF"
                        android:textSize="16sp"
                        app:layout_constraintEnd_toEndOf="@+id/imageView5"
                        app:layout_constraintHorizontal_bias="0.494"
                        app:layout_constraintStart_toStartOf="@+id/imageView5"
                        app:layout_constraintTop_toBottomOf="@+id/imageView5" />

                    <LinearLayout
                        android:id="@+id/linearLayout2"
                        android:layout_width="361dp"
                        android:layout_height="398dp"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="60dp"
                        android:layout_marginEnd="24dp"
                        android:layout_marginBottom="32dp"
                        android:background="@drawable/white_background"
                        android:elevation="3dp"
                        android:orientation="vertical"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textViewaddAcc">

                        <Button
                            android:id="@+id/button5"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="20dp"
                            android:layout_marginTop="130dp"
                            android:layout_marginEnd="20dp"
                            android:text="@string/add_btn"
                            tools:text="@string/Add_btn" />

                        <Button
                            android:id="@+id/fetchbtn"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="20dp"
                            android:layout_marginEnd="20dp"
                            android:text="View Accounts" />

                        <Button
                            android:id="@+id/TransferBetAccBtn"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="20dp"
                            android:layout_marginEnd="20dp"
                            android:text="《 》 Transfer" />
                    </LinearLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </ScrollView>
</FrameLayout>